# spi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _quarto.yml  spi.qmd  test.cpp
include/: spicommon.h
include/c/: spi.h
include/cplusplus/: spicplusplus.h  spigroups.hpp
src/: spi.c  spicplusplus.cpp
